--- a/app/views/welcome/start_game.js.haml
+++ b/app/views/welcome/start_game.js.haml
@@ -1,2 +1,2 @@
 :plain
-	$('.grid').html("#{escape_javascript(render partial: "grid")}");
+	$('.game').html("#{escape_javascript(render partial: "grid")}");
